Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68196

List of members documentation are missing for PolarChartView QML Type

XMLWordPrintable

    • aa765c1b7802746e6a97043b62a142eb2d2137af (qt/qtcharts/5.13)

      Hello,

      The "List of All Members for PolarChartView" in the documentation are missing for PolarChartView QML Type - Members . I am using the PolarChartView in my project very much.

      (Note: This is my first bug report :o )

      Cheers
      Philip

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kdpalara Kavindra Palaraja
            pga4711 Philip Gabrielsson
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes