Doc: Add the inherits tag to list the members available

Fixes: QTBUG-68196
Change-Id: I2e2858e002bdfc1d7a6aed34b67a78c8c9795639
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>